feat: [PIE-4954]: Freeze Windows Init (#10834)
* feat: [PIE-4954]: Freeze Windows Init

* feat: [PIE-4954]: Add module 72-freeze-windows

* feat: [PIE-4954]: Add module 72-freeze-windows

* feat: [PIE-4954]: eslint strings

* feat: [PIE-4954]: Add support for Deployment Freeze Init in Project and Org level

* feat: [PIE-4954]: Add Freeze Window¸- Empty View

--- a/src/modules/10-common/components/ResourceCardList/ResourceCardList.module.scss
+++ b/src/modules/10-common/components/ResourceCardList/ResourceCardList.module.scss
@@ -37,6 +37,10 @@
   background-color: var(--lime-50);
 }
 
+.freezeWindows {
+  background-color: var(--magenta-100);
+}
+
 .gitOpsEntities {
   margin: var(--spacing-xlarge) 0;
   padding-top: var(--spacing-xlarge);
