fix: [CDS-42398]: Tags YAML update , tags icons and last key stroke update , tags remove button functionality correction (#10875)
* fix: [CDS-42398]: tags bidirectional update from the YAML to VISUAL

* fix: [CDS-42398]: tags bidirectional update from the YAML to VISUAL

* fix: [CDS-42398]: fix azure infra bugs

* fix: [CDS-42398]: fix jest test

* fix: [CDS-42398]: fix default port and tags css fix

* fix: [CDS-42398]: remove inline styles

* fix: [CDS-42398]: fix css snap

--- a/src/modules/75-cd/components/PipelineSteps/SshWinRmAzureInfrastructureSpec/SshWinRmAzureInfrastructureSpec.module.scss
+++ b/src/modules/75-cd/components/PipelineSteps/SshWinRmAzureInfrastructureSpec/SshWinRmAzureInfrastructureSpec.module.scss
@@ -53,6 +53,7 @@
 }
 
 .removeTagBtn {
+  padding-left: 12px !important;
   padding-bottom: 20px !important;
   align-items: flex-end;
 }
@@ -62,4 +63,12 @@
       color: var(--grey-500) !important;
     }
   }
+}
+
+.addBtn {
+  padding-left: 0px !important;
+}
+
+.textStyles {
+  font-size: 13px !important;
 }
