--- a/src/modules/75-cd/components/EnvironmentsV2/EnvironmentDetails/InfrastructureDefinition/InfrastructureDefinition.module.scss
+++ b/src/modules/75-cd/components/EnvironmentsV2/EnvironmentDetails/InfrastructureDefinition/InfrastructureDefinition.module.scss
@@ -32,6 +32,7 @@
   background-color: var(--white) !important;
   z-index: 11;
   border-radius: 6px !important;
+  height: 80px;
 }
 
 .nameIdCard {
@@ -51,4 +52,9 @@
     align-items: center;
     z-index: 2;
   }
+}
+.body {
+  height: calc(100% - 80px);
+  overflow-x: hidden !important;
+  overflow-y: auto;
 }
