feat: [CI-3777]: search in tests (#10882)
* feat: [CI-3777]: search in tests

* feat: [CI-3777]: resolve sonar issue

* feat: [CI-3777]: minimal Search button

* feat: [CI-3777]: uicore package

* feat: [CI-3777]: address tests comments

--- a/src/modules/70-pipeline/pages/execution/ExecutionTestView/BuildTests.module.scss
+++ b/src/modules/70-pipeline/pages/execution/ExecutionTestView/BuildTests.module.scss
@@ -756,3 +756,12 @@
   color: var(--primary-7);
   cursor: pointer;
 }
+
+.expandSearchContainer {
+  margin-right: var(--spacing-xlarge) !important;
+  button {
+    margin-left: var(--spacing-medium);
+    border-top-left-radius: 0 !important;
+    border-bottom-left-radius: 0 !important;
+  }
+}
