fix: [PIE-4642]: google artifact registry added (#10327)
* fix: google artifact registry added

* fix: jest test cases added

* fix: jest added and artifact hidden

* fix: runtime field enabled

* fix: gar icon added and regions sorted

* fix: buildDetails api added

* fix: swagger updated

* fix: connector value passed in headers

* fix: UI issues fixed

* fix: test cases and type issues fixeD

* fix: latest swagger added

* fix: latest swagger added

* fix: snapshot updated

--- a/src/modules/70-pipeline/components/ArtifactsSelection/ArtifactRepository/ArtifactConnector.module.scss
+++ b/src/modules/70-pipeline/components/ArtifactsSelection/ArtifactRepository/ArtifactConnector.module.scss
@@ -33,6 +33,12 @@
     min-height: 400px;
   }
 
+  .artifactForm {
+    height: 450px;
+    margin-bottom: 20px;
+    overflow: scroll;
+  }
+
   .artifactSelect {
     button.bp3-button {
       width: 380px;
