feat: [CCM-8220]: added interval field for health check table (#10851)

--- a/src/modules/75-ce/components/COGatewayConfig/COGatewayConfig.module.scss
+++ b/src/modules/75-ce/components/COGatewayConfig/COGatewayConfig.module.scss
@@ -83,8 +83,13 @@
   button[type='button'][data-id='btn-add'] {
     display: none;
   }
-  table tbody td > div[class*='TextInput'] {
-    margin-bottom: 0 !important;
+  table {
+    thead th {
+      text-transform: uppercase;
+    }
+    tbody td > div[class*='TextInput'] {
+      margin-bottom: 0 !important;
+    }
   }
 }
 
