--- a/src/modules/75-ce/components/COGatewayReview/COGatewayReview.module.scss
+++ b/src/modules/75-ce/components/COGatewayReview/COGatewayReview.module.scss
@@ -12,6 +12,7 @@
     line-height: 13px;
     background-color: var(--grey-100) !important;
     vertical-align: middle !important;
+    text-transform: uppercase;
   }
   tbody {
     border-radius: 4px;
