fix: [PL-27796]: Step Connection settings UX fixes (#10967)
* fix: [PL-27796]: Fix UX issues

* fix: [PL-27796]: Fix UX issues

* fix: [PL-27796]: Fix copy issues

--- a/src/modules/33-auth-settings/components/CreateUpdateLdapWizard/CreateUpdateLdapWizard.module.scss
+++ b/src/modules/33-auth-settings/components/CreateUpdateLdapWizard/CreateUpdateLdapWizard.module.scss
@@ -11,9 +11,8 @@
   overflow-y: auto;
 }
 
-.connectionSettingsListCtr {
-  max-height: 450px;
-  overflow-y: auto;
+.connectionSettingsFormCtr {
+  padding-bottom: var(--spacing-xxlarge) !important;
 }
 
 .groupSettingsList,
