--- a/src/modules/75-cd/pages/get-started-with-cd/GetStartedWithCD.module.scss
+++ b/src/modules/75-cd/pages/get-started-with-cd/GetStartedWithCD.module.scss
@@ -35,7 +35,7 @@
 .buildYourOwnPipeline {
   height: 420px;
   border-radius: 8px;
-  background: #e4f7e1b3 !important;
+  background: rgb(243, 250, 245) !important;
   border: 0.5px solid var(--grey-100);
   box-shadow: 0px 0px 2px rgba(40, 41, 61, 0.04), 0px 4px 8px rgba(96, 97, 112, 0.16);
   padding: var(--spacing-huge) !important;
@@ -43,13 +43,15 @@
   position: relative;
 
   .buildImg {
-    position: absolute;
     bottom: 15px;
     right: 0px;
+    padding-left: 10px;
+    padding-bottom: 70px !important;
   }
 
   .buttonRow {
-    margin-top: var(--spacing-xlarge) !important;
+    margin-top: 50px !important;
+    align-items: center;
   }
 }
 
@@ -91,9 +93,27 @@
 }
 
 .image {
-  height: 373px !important;
-  width: 948px;
-  position: absolute;
-  left: 501px;
-  bottom: 0;
+  width: 96%;
+  height: 60%;
+  padding-left: 415px !important;
+  padding-right: 10px !important;
+}
+
+.linkText {
+  margin-left: 47px !important;
+}
+
+.listItemCss {
+  > li {
+    margin-bottom: 25px;
+  }
+  padding-left: 20px;
+}
+
+.containerItemCss {
+  margin-bottom: 10px !important;
+}
+
+.listContainerCss {
+  margin-bottom: 15px !important;
 }
