--- a/src/modules/33-auth-settings/components/CreateUpdateLdapWizard/CreateUpdateLdapWizard.module.scss
+++ b/src/modules/33-auth-settings/components/CreateUpdateLdapWizard/CreateUpdateLdapWizard.module.scss
@@ -27,6 +27,7 @@
 
 .settingsForm {
   padding: var(--spacing-4) 0 var(--spacing-4) var(--spacing-7) !important;
+  flex-grow: 1 !important;
 }
 
 .queryPreviewItem {
@@ -49,14 +50,6 @@
 
 .queryFormField {
   margin-bottom: var(--spacing-medium);
-}
-
-.commitBtn {
-  color: var(--green-700) !important;
-}
-
-.undoEditBtn {
-  color: var(--red-600) !important;
 }
 
 .wizardContainer {
@@ -113,9 +106,8 @@
 }
 
 .layoutIconMessage {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
+  width: 100% !important;
+  margin: var(--spacing-medium) 0 !important;
 }
 
 .connectionFieldSet {
@@ -131,9 +123,23 @@
 }
 
 .align-center {
-  align-items: 'center' !important;
+  align-items: center !important;
 }
 
 .fluidLabel {
   flex-grow: 1;
+}
+
+.queryTestResultWrapper {
+  align-self: flex-start;
+  flex-basis: 300px !important;
+  align-items: center !important;
+  justify-content: flex-end !important;
+}
+
+.horizontalSeparator {
+  border-right: 1px solid var(--grey-300);
+  height: auto;
+  margin: 0;
+  align-self: stretch;
 }
