--- a/src/modules/70-pipeline/components/InputSetErrorHandling/OutOfSyncErrorStrip/OutOfSyncErrorStrip.module.scss
+++ b/src/modules/70-pipeline/components/InputSetErrorHandling/OutOfSyncErrorStrip/OutOfSyncErrorStrip.module.scss
@@ -1,3 +1,10 @@
+/*
+ * Copyright 2022 Harness Inc. All rights reserved.
+ * Use of this source code is governed by the PolyForm Shield 1.0.0 license
+ * that can be found in the licenses directory at the root of this repository, also available at
+ * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
+ */
+
 .mainContainer {
   background: var(--red-50) !important;
   padding: var(--spacing-small) var(--spacing-xlarge) var(--spacing-small) var(--spacing-xlarge) !important;
@@ -22,4 +29,9 @@
 
 :global(.ConfirmationDialog--body) {
   width: 570px !important;
+}
+
+.reconcileButtonListView {
+  width: 136px;
+  height: 32px !important;
 }
