feat: [CDS-41461]: command unit fixes (#10974)

--- a/src/modules/75-cd/components/PipelineSteps/CommandScripts/Commands/CommandEdit.module.scss
+++ b/src/modules/75-cd/components/PipelineSteps/CommandScripts/Commands/CommandEdit.module.scss
@@ -6,7 +6,6 @@
  */
 
 .commandUnitForm {
-  height: 636px;
   overflow: auto;
   margin-left: var(--spacing-xsmall);
 
@@ -47,5 +46,6 @@
 }
 
 .footerContainer {
+  padding-top: 20px !important;
   position: sticky;
 }
