--- a/src/modules/85-cv/pages/health-source/common/MetricThresholds/Components/MetricThreshold.module.scss
+++ b/src/modules/85-cv/pages/health-source/common/MetricThresholds/Components/MetricThreshold.module.scss
@@ -12,6 +12,10 @@
     display: grid;
     grid-gap: 4px;
     align-items: center;
+
+    :global(.FormError--error) {
+      font-size: var(--font-size-small);
+    }
   }
 
   &FailFastTableHeader {
