feat: [PIE-4992]: Multi artifact sources (#11096)

--- a/src/modules/70-pipeline/components/ArtifactsSelection/ArtifactsSelection.module.scss
+++ b/src/modules/70-pipeline/components/ArtifactsSelection/ArtifactsSelection.module.scss
@@ -85,6 +85,11 @@
 }
 .sidecarList {
   width: 100%;
+  .primaryArtifactRef {
+    border: 1px solid var(--grey-100);
+    padding: var(--spacing-xsmall) var(--spacing-large);
+    background-color: var(--form-bg);
+  }
 }
 
 .noWrap {
