feat: [DEL-4037]: Implemented immutable delegates on UI (#10808)
* feat: [DEL-4037]: Implemented immutable delegates on UI

* fix: [DEL-4037]: minor css fix

* fix: [DEL-4037-immutable]: updated snapshot

* fix: [DEL-4037]: update ui

* feat: [DEL-4037]: updated expiring in time

* feat: [DEL-4037]: Updated coverage

--- a/src/modules/30-delegates/pages/delegates/DelegatesPage.module.scss
+++ b/src/modules/30-delegates/pages/delegates/DelegatesPage.module.scss
@@ -204,7 +204,7 @@
 }
 
 .podDetailsSeparator {
-  margin: var(--spacing-medium) 80px 0 !important;
+  margin: var(--spacing-medium) 48px 0 !important;
   border-top: solid 1px var(--grey-200);
 }
 .podDetailsContainer {
@@ -215,4 +215,29 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.paddedContainer {
+  width: fit-content;
+  padding: var(--spacing-small) 0;
+}
+
+.statusText {
+  width: fit-content !important;
+  padding: 2px 6px !important;
+  border-radius: 4px;
+  margin-right: var(--spacing-small) !important;
+}
+
+.tickerContainer {
+  background: var(--grey-100) !important;
+}
+
+.instanceStatus {
+  height: fit-content;
+  padding-left: 2px !important;
+}
+
+.paddingLeft {
+  padding-left: 55px !important;
 }
