--- a/src/modules/75-cd/components/PipelineSteps/DeployInfrastructureStep/DeployInfrastructures/DeployInfrastructures.module.scss
+++ b/src/modules/75-cd/components/PipelineSteps/DeployInfrastructureStep/DeployInfrastructures/DeployInfrastructures.module.scss
@@ -9,6 +9,10 @@
   :global {
     .ModalDialog--body {
       padding: 0 !important;
+    }
+
+    .ModalDialog--bodyContent {
+      padding: 0 !important;
       overflow: hidden;
     }
   }
