feat: [PIE-5399]: multi services run pipeline form update (#11312)
* feat: multi services run pipeline form update

* feat: multi services run pipeline form update

* feat: multi services run pipeline form update

* feat: multi services run pipeline form update

--- a/src/modules/75-cd/components/PipelineSteps/DeployServiceEntityStep/ServiceEntitiesList/ServiceEntitiesList.module.scss
+++ b/src/modules/75-cd/components/PipelineSteps/DeployServiceEntityStep/ServiceEntitiesList/ServiceEntitiesList.module.scss
@@ -5,9 +5,13 @@
  * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
  */
 
+.cardsContainer {
+  width: 1000px;
+}
+
 .card {
   display: block;
-  width: 1000px;
+  width: 100%;
   margin-bottom: var(--spacing-5);
 
   .toggleWrapper {
