feat: [CDS-42908]: Visual View for Deployment Freeze (#11434)
* feat: [feat: CDS-42908]: Visual View for Deployment Freeze

* feat: [CDS-42908]: Overview section

* feat: [CDS-42908]: Overview section

* feat: [CDS-42908]: Overview section

* feat: [CDS-42908]: Config section

* feat: [CDS-42908]: Config section

* feat: [CDS-42908]: Overview Section - Create New Freeze Window

* feat: [CDS-42908]: Add Create New Freeze Modal

* feat: [CDS-42908]: Add Create New Freeze Modal

--- a/src/modules/72-freeze-windows/components/FreezeWindowStudio/FreezeWindowStudio.module.scss
+++ b/src/modules/72-freeze-windows/components/FreezeWindowStudio/FreezeWindowStudio.module.scss
@@ -23,6 +23,11 @@
   }
 }
 
+/** Create New Freeze **/
+.createNewFreezeForm {
+  padding: var(--spacing-large) 12px 0 12px;
+}
+
 /** YAML VIEW **/
 .yamlBuilder {
   padding: var(--spacing-large);
@@ -38,6 +43,7 @@
   }
 }
 
+/** VISUAL VIEW **/
 .stepTabs {
   height: 100%;
   width: 100%;
@@ -57,4 +63,9 @@
 
 .tabIcon {
   margin-right: var(--spacing-small) !important;
+}
+
+.sectionCard {
+  width: 1024px;
+  margin-top: var(--spacing-3);
 }
