feat: [CDS-42909]: Freeze Windows - Config Section (#11441)
* feat: [CDS-42909]: Freeze Windows - Config Section

* feat: [CDS-42909]: Freeze Windows - Config Section

* feat: [CDS-42909]: Freeze Windows - Config Section

* feat: [CDS-42909]: Freeze Windows - Config Section

* feat: [CDS-42909]: Fix YAML

* add buttons to config section

* Add types

* Add types

* Add types

--- a/src/modules/72-freeze-windows/components/FreezeWindowStudio/FreezeWindowStudio.module.scss
+++ b/src/modules/72-freeze-windows/components/FreezeWindowStudio/FreezeWindowStudio.module.scss
@@ -69,3 +69,11 @@
   width: 1024px;
   margin-top: var(--spacing-3);
 }
+
+.configFormContainer {
+  border: 1px solid var(--grey-200);
+  min-height: 100px;
+  &.isEditView {
+    background-color: var(--primary-1) !important;
+  }
+}
