feat: [CDS-42903]: sub header filters with date range filter (#11496)
* feat: sub header filters with date range filter

* feat: reset

* feat: imports

* feat: imports

--- a/src/modules/72-freeze-windows/components/FreezeWindowSubHeader/FreezeWindowSubHeader.module.scss
+++ b/src/modules/72-freeze-windows/components/FreezeWindowSubHeader/FreezeWindowSubHeader.module.scss
@@ -5,16 +5,10 @@
  * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
  */
 
-.main {
-  --page-header-height: 138px;
+.dateRange {
+  border: 1px solid var(--primary-5) !important;
 }
 
-.freezeWindowsPageSubHeader {
-  position: sticky;
-  top: 0;
-  z-index: 3;
-}
-
-.listView {
-  margin: var(--spacing-large);
+.subHeaderActions {
+  width: 100% !important;
 }
