feat: actions and global enable action (#11511)

--- a/src/modules/72-freeze-windows/components/FreezeWindowList/FreezeWindowList.module.scss
+++ b/src/modules/72-freeze-windows/components/FreezeWindowList/FreezeWindowList.module.scss
@@ -33,3 +33,11 @@
     font-size: var(--font-size-small) !important;
   }
 }
+
+.checkbox label {
+  margin-bottom: 0 !important;
+}
+
+.table {
+  padding: 0 var(--spacing-large) var(--spacing-large);
+}
