--- a/src/modules/72-freeze-windows/components/FreezeWindowStudio/FreezeWindowStudio.module.scss
+++ b/src/modules/72-freeze-windows/components/FreezeWindowStudio/FreezeWindowStudio.module.scss
@@ -68,6 +68,11 @@
 .sectionCard {
   width: 1024px;
   margin-top: var(--spacing-3);
+  .separator {
+    width: 100%;
+    border: 0.5px solid var(--grey-200);
+    margin: var(--spacing-medium) 0 !important;
+  }
 }
 
 .configFormContainer {
@@ -76,4 +81,29 @@
   &.isEditView {
     background-color: var(--primary-1) !important;
   }
+}
+
+.tickButton {
+  background-color: var(--grey-0) !important;
+  border: 1px solid var(--primary-7) !important;
+  :global {
+    svg {
+      fill: var(--primary-7) !important;
+    }
+  }
+}
+
+.crossButton {
+  background-color: var(--grey-0) !important;
+  border: 1px solid var(--red-500) !important;
+  :global {
+    svg {
+      fill: var(--red-500) !important;
+    }
+  }
+}
+
+.addNewRuleButton {
+  margin-top: var(--spacing-large) !important;
+  margin-left: -20px !important; // padding left of Add Button
 }
