feat: [CDS-42911]: Freeze Window - Config Section Changes (#11550)
* feat: [CDS-42911]: Freeze Window - Config Section Changes

* feat: [CDS-42911]: Freeze Window - Config Section Changes

* feat: [CDS-42911]: fix Autofocus issue in Freeze Windows

* add autofocus property

* feat: [CDS-42911]: Add Notify button

* feat: [CDS-42911]: Make Organization multi select field

* feat: [CDS-42911]: add proper query params

* feat: [CDS-42911]: Add Services Field for Project level

--- a/src/modules/72-freeze-windows/components/FreezeWindowStudio/FreezeWindowStudio.module.scss
+++ b/src/modules/72-freeze-windows/components/FreezeWindowStudio/FreezeWindowStudio.module.scss
@@ -47,6 +47,11 @@
 .stepTabs {
   height: 100%;
   width: 100%;
+  :global(.bp3-tabs) {
+    max-height: 100%;
+    overflow: auto;
+    padding-bottom: var(--spacing-10);
+  }
   :global(.bp3-tab-list) {
     border-bottom: 1px solid var(--grey-300);
     background-color: var(--white);
@@ -106,4 +111,18 @@
 .addNewRuleButton {
   margin-top: var(--spacing-large) !important;
   margin-left: -20px !important; // padding left of Add Button
+}
+
+.freezeNameContainer {
+  .freezeName {
+    font-size: 20px !important;
+    font-weight: 600 !important;
+    color: var(--grey-700) !important;
+    line-height: 28px !important;
+    margin-right: var(--spacing-small);
+  }
+}
+
+.marginRight {
+  margin-right: var(--spacing-11);
 }
