feat: useInterval hook with compute current time range (#11602)

--- a/src/modules/72-freeze-windows/components/FreezeWindowList/FreezeWindowList.module.scss
+++ b/src/modules/72-freeze-windows/components/FreezeWindowList/FreezeWindowList.module.scss
@@ -7,8 +7,9 @@
 
 .status {
   border-radius: var(--spacing-2);
-  padding: var(--spacing-1) var(--spacing-2) !important;
+  padding: var(--spacing-2) var(--spacing-3) !important;
   display: inline-block !important;
+  text-transform: uppercase;
   &.active {
     background-color: var(--primary-2);
     color: var(--primary-7);
