--- a/src/modules/72-freeze-windows/components/FreezeWindowListSubHeader/FreezeWindowListSubHeader.module.scss
+++ b/src/modules/72-freeze-windows/components/FreezeWindowListSubHeader/FreezeWindowListSubHeader.module.scss
@@ -5,12 +5,6 @@
  * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
  */
 
-.freezeWindowsPageSubHeader {
-  position: sticky;
-  top: 0;
-  z-index: 3;
-}
-
 .dateRange {
   border: 1px solid var(--primary-5) !important;
 }
@@ -21,4 +15,12 @@
 
 .main {
   --page-header-height: 138px;
+}
+
+.subHeader {
+  position: sticky;
+  top: 0;
+  z-index: 3;
+  border: none;
+  box-shadow: var(--elevation-2);
 }
