feat: [CDS-42911]: 1. Lift the state up to parent, 2. Integrate Save button in Schedule form, 3. Add Enable Toggle Switch, 4. Fir redirection issue, 5. Fix Layout for Org Level (#11604)
* feat: [CDS-42911]: Freeze Windows - Lift the state up to parent

* feat: [CDS-42911]: Integrate Save button in Schedule form

* fix: [CDS-42911]: Fix redirection and refresh issue

* fix: [CDS-42911]: Fix View layout for Org level

* fix identifier issue

* fix identifier issue

* feat: [CDS-42911]: Add Enable Toggle Switch

* feat: [CDS-42911]: Add Enable Toggle Switch

--- a/src/modules/72-freeze-windows/components/FreezeWindowStudio/FreezeWindowStudio.module.scss
+++ b/src/modules/72-freeze-windows/components/FreezeWindowStudio/FreezeWindowStudio.module.scss
@@ -113,6 +113,14 @@
   margin-left: -20px !important; // padding left of Add Button
 }
 
+.freezeToggler {
+  span {
+    width: 30px;
+    height: 16px;
+    outline: none !important;
+  }
+}
+
 .freezeNameContainer {
   .freezeName {
     font-size: 20px !important;
@@ -164,4 +172,13 @@
   &.marginSmaller {
     margin-bottom: var(--spacing-2);
   }
+}
+
+.scheduleTabSaveBtnContainer {
+  margin-top: var(--spacing-5);
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 84px;
 }
