feat: [PIE-5702]: multi env fixes + custom deployment in infra (#11763)
* chore: code cleanup

* fix: allowSimultaneouslDeployments false value

* chore: add remove environment

* feat: env as runtime

* feat: infra as runtime

* feat: environments as runtime values

* feat: radio css

* feat: infra as runtime in multi envs

* feat: env group and children as runtime

* feat: infra as RT inputs

* fix: yaml val fail

* feat: validation for environments

* feat: edit environment

* chore: css updates

* feat: add, edit, delete for infrastructure

* feat: add custom deployment ref

* test: updated snaps

* test: updated snaps

--- a/src/modules/75-cd/components/PipelineSteps/DeployEnvironmentEntityStep/DeployEnvironmentEntityStep.module.scss
+++ b/src/modules/75-cd/components/PipelineSteps/DeployEnvironmentEntityStep/DeployEnvironmentEntityStep.module.scss
@@ -5,9 +5,44 @@
  * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
  */
 
-.toggle {
-  position: relative;
-  margin-bottom: calc(-1 * var(--spacing-9)) !important;
+.environment-entity-widget {
+  :global {
+    .bp3-form-group {
+      margin-bottom: 0px;
+    }
+    .TextInput--main {
+      margin-bottom: 0px !important;
+    }
+  }
+
+  .toggle {
+    position: relative;
+    margin-bottom: calc(-1 * var(--spacing-9)) !important;
+  }
+
+  .toggle-margin {
+    margin-bottom: calc(-1 * var(--spacing-12)) !important;
+  }
+
+  .radio-group {
+    padding: var(--spacing-small) 0;
+
+    > label {
+      margin-right: var(--spacing-7);
+      color: var(--grey-600);
+      font-weight: 500;
+      font-size: var(--font-size-small);
+      letter-spacing: 0.2px;
+
+      span[class*='bp3-control-indicator'] {
+        box-shadow: inset 0 0 0 1px var(--primary-7), inset 0 -1px 0 var(--primary-7) !important;
+      }
+
+      input:checked ~ span[class*='bp3-control-indicator'] {
+        background-color: var(--primary-7) !important;
+      }
+    }
+  }
 }
 
 .inputWidth {
