--- a/src/modules/85-sto/components/SeverityPill/SeverityPill.module.scss
+++ b/src/modules/85-sto/components/SeverityPill/SeverityPill.module.scss
@@ -5,7 +5,7 @@
  * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
  */
 
-@import 'src/modules/85-sto-steps/styles/severity';
+@import '../../styles/severity';
 
 .main {
   @include severityColors();
