feat: [PIE-5702]: clusters in multi env (#11888)
* feat: clusters in run pipeline form

* feat: clusters in pipeline studio without transformation

* test: single env single infra

* test: clusters in single env

* test: multi env, env group

* fix: toggle alignment

* feat: backwards compatibility for gitOps clusters

* chore: resolved comments

* Empty-Commit

* Empty-Commit

--- a/src/modules/75-cd/components/PipelineSteps/DeployEnvironmentEntityStep/DeployEnvironmentEntityStep.module.scss
+++ b/src/modules/75-cd/components/PipelineSteps/DeployEnvironmentEntityStep/DeployEnvironmentEntityStep.module.scss
@@ -42,6 +42,10 @@
         background-color: var(--primary-7) !important;
       }
     }
+
+    > :last-child {
+      margin-right: 0 !important;
+    }
   }
 }
 
