feat: [PIE-5477]: CRUD env group in pipeline studio + pseudo field fix  (#11890)
* fix: pseudo field in pipeline yaml when using multi svc/env template

* fix: environments radio group retention on switch

* select environments when single to multi

* environment groups toggle fixes

* feat: environment groups create, delete

* feat: environment groups edit

* chore: layout change in environments tab

* fix: align items to start

* chore: add comment

* chore: update comment

* fix: retention in env group

--- a/src/modules/75-cd/components/PipelineSteps/DeployEnvironmentEntityStep/DeployEnvironmentEntityStep.module.scss
+++ b/src/modules/75-cd/components/PipelineSteps/DeployEnvironmentEntityStep/DeployEnvironmentEntityStep.module.scss
@@ -6,6 +6,13 @@
  */
 
 .environment-entity-widget {
+  display: grid;
+  width: 1000px;
+  grid-template-areas:
+    'input-field toggle'
+    'main-content main-content';
+  align-items: start;
+
   :global {
     .bp3-form-group {
       margin-bottom: 0px;
@@ -16,12 +23,7 @@
   }
 
   .toggle {
-    position: relative;
-    margin-bottom: calc(-1 * var(--spacing-9)) !important;
-  }
-
-  .toggle-margin {
-    margin-bottom: calc(-1 * var(--spacing-12)) !important;
+    grid-area: toggle;
   }
 
   .radio-group {
